--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
 # Distribution / packaging
 .Python
 build/
@@ -27,11 +24,6 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a PyInstaller script; this is commented out
-#  by default unless you are deploying your application with PyInstaller.
-# *.spec
-
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -50,47 +42,6 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-.scrapy
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# PEP 582; __pypackages__ directory
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath files
-.sage.py
-
 # Environments
 .env
 .venv
@@ -100,33 +51,14 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+# IDE specific
+.idea/
+*.iml
 
 # VS Code
 .vscode/
 
-# Sensitive files
-credentials/
+# Sensitive files and logs
+credentials/*.json
 token.json
-*.log # Generic log files, covered by logs/ below for specific app log
-logs/converter.log # Specific app log if you want to track it but not its contents
-
-# IDE specific
-.idea/
-*.iml
+logs/*.log
